force-app/main/default/objects/ExchangeRate__c/ExchangeRate__c.object-meta.xml
<CustomObject>
    <label>Exchange Rate</label>
    <nameField>
        <label>Exchange Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Rate</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>