force-app/main/default/objects/ExchangeRate__c/fields/BaseDate__c.field-meta.xml
<CustomField>
    <fullName>BaseDate__c</fullName>
    <label>Base Date</label>
    <type>Date</type>
</CustomField>