force-app/main/default/objects/ExchangeRate__c/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>10</scale>
    <type>Number</type>
</CustomField>