force-app/main/default/objects/ExchangeRate__c/fields/RateUnit__c.field-meta.xml
<CustomField>
    <fullName>RateUnit__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>