force-app/main/default/objects/ExchangeRate__c/fields/USDRate__c.field-meta.xml
<CustomField>
    <fullName>USDRate__c</fullName>
    <label>USD Rate</label>
    <precision>16</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>