force-app/main/default/objects/ExchangeRate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BaseDate__c</columns>
    <columns>Currency__c</columns>
    <columns>ExchangeRate__c</columns>
    <columns>USDRate__c</columns>
    <columns>RateUnit__c</columns>
    <columns>Status__c</columns>
    <columns>BizRegion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>